# fyp

./: .gitignore  pyproject.toml
app/: pubspec.yaml
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: main.dart  transcription_page.dart
app/lib/pages/: history_page.dart  home_page.dart  login_page.dart  profile_page.dart  register_page.dart  settings_page.dart  subscription_page.dart
app/lib/services/: api_service.dart
app/lib/widgets/: custom_button.dart  custom_input.dart  sidebar.dart
backend/: main.py  reset_db.py  seed_admin.py
backend/api/: deps.py
backend/api/routes/: admin.py  auth.py  users.py
backend/core/: config.py  database.py  security.py
backend/models/: user.py
backend/schemas/: admin.py  user.py
backend/tests/: test_auth.py
frontend/: app.js  index.html  login.html  login.js  style.css
