[project]
name = "fyp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn",
    "sqlalchemy",
    "pydantic",
    "pydantic[email]",
    "python-jose[cryptography]",
    "python-multipart",
    "psycopg2-binary",
    "bcrypt",
]

[dependency-groups]
dev = [
    "pytest",
    "httpx",
]
